Update intro image and phone number link

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 
   <!-- 🌟 شاشة البداية -->
   <div id="intro-screen">
-    <img src="intro school.png" alt="Intro Logo">
+    <img src="IMG-20251106-WA0017.jpg" alt="Intro Logo">
   </div>
 
   <div class="stars" id="stars"></div>
@@ -337,7 +337,7 @@
 
 
 
-            <a href="tel:055019405118⁩" target="_blank" > <i class="fa fa-phone"></i> تواصل معنا عبر الهاتف</a>
+            <a href="tel:0551951135" target="_blank" > <i class="fa fa-phone"></i> تواصل معنا عبر الهاتف</a>
     </div>
     <a href="https://form.jotform.com/210765473533457" class="call-button">  سجل الآن وأنضم إلينا </a>
 
