Update image source in index.html

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
   <div class="card">
     <button class="theme-toggle" id="theme-toggle"><i class="fas fa-moon"></i></button>
 
-    <img src="icon school.png" alt="صورتك">
+    <img src="IMG-20251106-WA0016.jpg" alt="صورتك">
     <h1>مـدارس الأكـاديمية العصريـة</h1>
     <p class="quote">“  رؤيتنا أن تكون مدارسنا الأولى في بناء جيل مبدع متميز قادر على مواكبة تحديات المستقبل  ”</p>
 
